--- a/topics/piping/uppercase pipe/uppercaseexample.component.html
+++ b/topics/piping/uppercase pipe/uppercaseexample.component.html
@@ -7,3 +7,13 @@
         Orignal text:{{text | uppercase}}
     </p>
 </div>
+
+<p>
+  The chained hero's uppercase birthday is
+  {{ birthday | date | uppercase}}
+</p>
+
+<p>
+  The chained hero's uppercase birthday in "fullDate" format is
+  {{ birthday | date:'fullDate' | uppercase}}
+</p>
