--- a/topics/piping/lowercase piping/lowercasepipe.component.html
+++ b/topics/piping/lowercase piping/lowercasepipe.component.html
@@ -8,3 +8,12 @@
         Orignal text:{{text | uppercase}}
     </p>
 </div>
+<p>
+  The chained hero's uppercase birthday is
+  {{ birthday | date | uppercase}}
+</p>
+
+<p>
+  The chained hero's uppercase birthday in "fullDate" format is
+  {{ birthday | date:'fullDate' | uppercase}}
+</p>
